WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264224
REGRESSION(
270088@main
): [LBSE] Unbreak clipping (last minute regression)
https://bugs.webkit.org/show_bug.cgi?id=264224
Summary
REGRESSION(270088@main): [LBSE] Unbreak clipping (last minute regression)
Nikolas Zimmermann
Reported
2023-11-05 04:45:13 PST
Clipping is broken in trunk -- due to a last minute fix that wasn't checked.
Attachments
Add attachment
proposed patch, testcase, etc.
Nikolas Zimmermann
Comment 1
2023-11-05 04:52:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20010
EWS
Comment 2
2023-11-05 10:32:06 PST
Committed
270248@main
(bbebc5905126): <
https://commits.webkit.org/270248@main
> Reviewed commits have been landed. Closing PR #20010 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-11-05 10:33:14 PST
<
rdar://problem/117969200
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug